# mimi-brain-interface

./: .gitignore  CLAUDE.md.template  Cargo.toml  HANDOFF.md
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: BrainPanel.tsx  ChannelsPanel.tsx  ConfigPanel.tsx  Header.tsx  NavRail.tsx  QueryPanel.tsx  StatusPanel.tsx
dashboard/src/components/brain/: BrainGraph.tsx  BrainView.tsx  NodeDetail.tsx  StatsHUD.tsx
dashboard/src/components/channels/: ChannelsView.tsx
dashboard/src/components/crons/: CronsView.tsx
dashboard/src/components/home/: HomeView.tsx
dashboard/src/components/logviewer/: LogsView.tsx
dashboard/src/components/memory/: MemoryView.tsx
dashboard/src/components/nutrition/: NutritionView.tsx
dashboard/src/components/secrets/: SecretsView.tsx
dashboard/src/components/services/: ServicesView.tsx
dashboard/src/components/settings/: SettingsView.tsx
dashboard/src/components/subagents/: SubagentsView.tsx
dashboard/src/components/tasks/: TasksView.tsx
dashboard/src/components/ui/: liquid-gl.tsx  liquid-glass.tsx
dashboard/src/hooks/: useApi.ts
scripts/: tts_edge.py
src/: claude.rs  context_buffer.rs  main.rs  paths.rs  services.rs  tasks.rs
src/brain/: mod.rs  schema.sql
src/channels/: discord.rs  mod.rs  presence.rs  telegram.rs  voice.rs
src/commands/: audit.rs  backup.rs  brain.rs  channel.rs  config.rs  dashboard.rs  launch.rs  mod.rs  reflect.rs  secret.rs  setup.rs  status.rs  update.rs
src/dashboard/: index.html  mod.rs  nutrition.rs  subagents.rs  tasks.rs
src/subagents/: mod.rs
