[package]
name = "mimi"
version = "0.1.0"
edition = "2024"
description = "An autonomous AI assistant framework powered by Claude Code"
license = "MIT"

[[bin]]
name = "mimi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
dirs = "6"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"

# Voice channel scaffold (feature/discord-voice). `audiopus` (libopus FFI,
# needs `apt install libopus-dev autoconf automake libtool pkg-config`) is
# pulled in for the codec wrapper; `aes-gcm` powers the RTP encrypted-packet
# path (Discord voice has migrated off xsalsa20 — current modes are
# `aead_aes256_gcm_rtpsize` and `aead_xchacha20_poly1305_rtpsize`; we
# implement the former).
rand = "0.9"
aes-gcm = "0.10"
audiopus = "0.2"
davey = "0.1.3"
